--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Pants workspace files
+.pants.d/
+dist
+.pids
+.pants.workdir.file_lock*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
