Flesh out the repo with some sample code.
Also a pants_from_sources script, for convenience.

--- a/pants.toml
+++ b/pants.toml
@@ -1,15 +1,23 @@
+# Copyright 2020 Pants project contributors.
+# Licensed under the Apache License, Version 2.0 (see LICENSE).
+
 [GLOBAL]
-pants_version = "1.26.0.dev2"
+pants_version = "1.26.0rc1"
 v1 =  false  # Turn off the v1 execution engine.
 v2 = true  # Enable the v2 execution engine.
-v2_ui = true  # Enable the v2 exeuction engine's terminal-based UI.
+v2_ui = true  # Enable the v2 execution engine's terminal-based UI.
 
 backend_packages = []  # Deregister all v1 backends.
 
 # List v2 backends here.
-backend_packages2 = ['pants.backend.python']
+backend_packages2 = [
+  'pants.backend.python',
+  'pants.backend.python.lint.docformatter',
+  'pants.backend.python.lint.black',
+  'pants.backend.python.lint.flake8',
+  'pants.backend.python.lint.isort',
+  'pants.backend.python.lint.pylint',
+]
 
 # List v2 plugins here.
 plugins2 = []
-
-build_file_imports = "error"
