--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Copyright 2020 Pants project contributors.
+# Licensed under the Apache License, Version 2.0 (see LICENSE).
+
 # Pants workspace files
 .pants.d/
 dist
@@ -133,3 +136,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# IDEA project files
+.idea/
+*.iml
