--- a/3rdparty/python/BUILD
+++ b/3rdparty/python/BUILD
@@ -1,3 +1,7 @@
+# Copyright 2020 Pants project contributors.
+# Licensed under the Apache License, Version 2.0 (see LICENSE).
+
+
 # A macro that turns every entry in this directory's requirements.txt into a target
 # with the name of the corresponding dist.
 #
