--- a/pants.toml
+++ b/pants.toml
@@ -31,6 +31,9 @@ source_roots = """{
 
 
 [python-setup]
-# We have both Python 2 and Python 3 code in the repo, so we have to override the
-# default repo-wide value of CPython>=3.6.
-interpreter_constraints = "CPython>=2.7,!=3.0,!=3.1,!=3.2,!=3.3,!=3.4,!=3.5"
+# The default interpreter compatibility for code in this repo.
+# Individual targets can override this with the `compatibility` field.
+# For example, targets containing Python 2.7-only code can set `compatibility = "CPython>=2.7,<3"`,
+# and targets containing code compatible with Python 2.7+ *and* Python 3.5+ can set
+# `compatibility = CPython>=2.7,!=3.0,!=3.1,!=3.2,!=3.3,!=3.4`.
+interpreter_constraints = "CPython>=3.7"
