Python 2 code examples. (#5)

--- a/helloworld/BUILD
+++ b/helloworld/BUILD
@@ -1,17 +1,25 @@
 # Copyright 2020 Pants project contributors.
 # Licensed under the Apache License, Version 2.0 (see LICENSE).
 
-python_library(
+
+python_binary(
+    # name defaults to the name of this directory, i.e., `helloworld`.
+    sources = ["main.py"],
+    entry_point = "helloworld.main",
     dependencies = [
         "//:ansicolors",
         "helloworld/greet",
     ]
 )
 
+
 python_binary(
-    name = "main",
-    entry_point = "helloworld.main",
+    name = "helloworld_py2",
+    sources = ["main_py2.py"],
+    entry_point = "helloworld.main_py2",
+    compatibility = ">=2.7,<3",
     dependencies = [
-        ":helloworld",
+        "//:ansicolors",
+        "helloworld/greet_py2",
     ]
 )
