--- a/pants.toml
+++ b/pants.toml
@@ -2,7 +2,7 @@
 # Licensed under the Apache License, Version 2.0 (see LICENSE).
 
 [GLOBAL]
-pants_version = "1.26.0rc1"
+pants_version = "1.27.0.dev0"
 v1 =  false  # Turn off the v1 execution engine.
 v2 = true  # Enable the v2 execution engine.
 v2_ui = true  # Enable the v2 execution engine's terminal-based UI.
@@ -28,3 +28,12 @@ plugins2 = []
 source_roots = """{
   '': ('python',),
 }"""
+
+
+[python-setup]
+# The default interpreter compatibility for code in this repo.
+# Individual targets can override this with the `compatibility` field.
+# For example, targets containing Python 2.7-only code can set `compatibility = "CPython>=2.7,<3"`,
+# and targets containing code compatible with Python 2.7+ *and* Python 3.5+ can set
+# `compatibility = CPython>=2.7,!=3.0,!=3.1,!=3.2,!=3.3,!=3.4`.
+interpreter_constraints = "CPython>=3.7"
