--- a/pants.toml
+++ b/pants.toml
@@ -35,4 +35,4 @@ source_roots = """{
 # For example, targets containing Python 2.7-only code can set `compatibility = "CPython>=2.7,<3"`,
 # and targets containing code compatible with Python 2.7+ *and* Python 3.5+ can set
 # `compatibility = CPython>=2.7,!=3.0,!=3.1,!=3.2,!=3.3,!=3.4`.
-interpreter_constraints = "CPython>=3.7"
+interpreter_constraints = ["CPython>=3.7"]
