--- a/pants.toml
+++ b/pants.toml
@@ -28,7 +28,6 @@ source_roots = """{
   '': ('python',),
 }"""
 
-
 [python-setup]
 # The default interpreter compatibility for code in this repo. Individual targets can ovverride
 #  this with the `compatibility` field. See
@@ -36,6 +35,13 @@ source_roots = """{
 interpreter_constraints = [">=3.7"]
 # Use a lockfile. See https://pants.readme.io/docs/python-third-party-dependencies.
 requirement_constraints = "constraints.txt"
+
+[lint]
+# We use `per_target_caching` because we have some Python 2-only targets and some Python 3-only
+# targets, so we need to run each target as a separate process to avoid interpreter compatibility
+# conflicts. If you only have one Python version in your repository, do not use this setting. See
+# https://pants.readme.io/docs/python-lint-goal.
+per_target_caching = true
 
 [flake8]
 config = ".flake8"
