--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,4 +1,6 @@
 [settings]
+# This is to make isort compatible with Black. See
+# https://black.readthedocs.io/en/stable/the_black_code_style.html#how-black-wraps-lines.
 line_length=88
 multi_line_output=3
 include_trailing_comma=True
