Add Flake8 and isort config files (#12)
We need these config files for a followup change. 

It's also a good demo of how to hook up config files.

--- a/pants.toml
+++ b/pants.toml
@@ -22,13 +22,11 @@ backend_packages2 = [
 # List v2 plugins here.
 plugins2 = []
 
-
 [source]
 # The Python source root is the repo root. See https://pants.readme.io/docs/source-roots.
 source_roots = """{
   '': ('python',),
 }"""
-
 
 [python-setup]
 # The default interpreter compatibility for code in this repo. Individual targets can ovverride
@@ -37,3 +35,16 @@ source_roots = """{
 interpreter_constraints = [">=3.7"]
 # Use a lockfile. See https://pants.readme.io/docs/python-third-party-dependencies.
 requirement_constraints = "constraints.txt"
+
+[lint]
+# We use `per_target_caching` because we have some Python 2-only targets and some Python 3-only
+# targets, so we need to run each target as a separate process to avoid interpreter compatibility
+# conflicts. If you only have one Python version in your repository, do not use this setting. See
+# https://pants.readme.io/docs/python-lint-goal.
+per_target_caching = true
+
+[flake8]
+config = ".flake8"
+
+[isort]
+config = [".isort.cfg"]
