--- a/pants.toml
+++ b/pants.toml
@@ -2,7 +2,7 @@
 # Licensed under the Apache License, Version 2.0 (see LICENSE).
 
 [GLOBAL]
-pants_version = "1.28.0.dev1"
+pants_version = "1.28.0.dev2"
 v1 =  false  # Turn off the v1 execution engine.
 v2 = true  # Enable the v2 execution engine.
 v2_ui = true  # Enable the v2 execution engine's terminal-based UI.
@@ -10,13 +10,14 @@ v2_ui = true  # Enable the v2 execution engine's terminal-based UI.
 backend_packages = []  # Deregister all v1 backends.
 
 # List v2 backends here.
-backend_packages2 = [
+backend_packages2.add = [
+  'pants.backend.awslambda.python',
+  'pants.backend.codegen.protobuf.python',
   'pants.backend.python',
   'pants.backend.python.lint.docformatter',
   'pants.backend.python.lint.black',
   'pants.backend.python.lint.flake8',
   'pants.backend.python.lint.isort',
-  'pants.backend.awslambda.python',
 ]
 
 # List v2 plugins here.
@@ -24,9 +25,7 @@ plugins2 = []
 
 [source]
 # The Python source root is the repo root. See https://pants.readme.io/docs/source-roots.
-source_roots = """{
-  '': ('python',),
-}"""
+root_patterns = ["^"]
 
 [python-setup]
 # The default interpreter compatibility for code in this repo. Individual targets can ovverride
