--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -24,6 +24,6 @@ jobs:
     - name: bootstrap
       run: ./pants --version
     - name: Lint
-      run: ./pants --changed-since=origin/master lint
+      run: ./pants
     - name: Test
-      run: ./pants --changed-since=origin/master --changed-include-dependees=transitive test
+      run: ./pants --changed-include-dependees=transitive test
