--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -14,7 +14,6 @@ jobs:
     strategy:
       matrix:
         python-version: [3.7]
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -23,6 +22,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: bootstrap
       run: ./pants --version
+    - name: show diff
+      run: git diff --name-only ${{ github.event.before }} ${{ github.sha }}
     - name: Lint
       run: ./pants lint --changed-since=origin/master/HEAD
     - name: Test
