--- a/pants.toml
+++ b/pants.toml
@@ -6,7 +6,7 @@ pants_version = "2.0.0.dev4"
 pantsd = true  # Enable the Pants daemon for better performance.
 
 # List backends here.
-backend_packages = [
+backend_packages.add = [
   'pants.backend.awslambda.python',
   'pants.backend.codegen.protobuf.python',
   'pants.backend.python',
