Fix the setup-py part of the example.
Required moving the .proto files to be
below the exported target (in the filesystem
sense).

If we support setting a source root on
generated protos in the future, we can
modify this further to demo that.

--- a/helloworld/util/BUILD
+++ b/helloworld/util/BUILD
@@ -7,13 +7,13 @@ python_library(
     dependencies = [
         "//:setuptools",
         "//:translate",
-        "helloworld/protos",
+        "helloworld/util/proto",
     ],
     # See https://pants.readme.io/docs/python-setup-py-goal.
     provides = setup_py(
         name='helloworld.util',
         version='0.0.1',
-        description='Greeting library utilities',
+        description='Greeting library utilities.',
     ),
 )
 
