--- a/pants.toml
+++ b/pants.toml
@@ -2,10 +2,9 @@
 # Licensed under the Apache License, Version 2.0 (see LICENSE).
 
 [GLOBAL]
-pants_version = "2.0.0.dev5"
+pants_version = "2.0.0.dev7"
 pantsd = true  # Enable the Pants daemon for better performance.
 
-# List backends here.
 backend_packages.add = [
   'pants.backend.awslambda.python',
   'pants.backend.codegen.protobuf.python',
@@ -15,9 +14,6 @@ backend_packages.add = [
   'pants.backend.python.lint.flake8',
   'pants.backend.python.lint.isort',
 ]
-
-# List plugins here.
-plugins = []
 
 [source]
 # The Python source root is the repo root. See https://pants.readme.io/docs/source-roots.
@@ -39,3 +35,6 @@ config = ".flake8"
 
 [isort]
 config = [".isort.cfg"]
+
+[python-infer]
+imports = false
