--- a/pants.ci.toml
+++ b/pants.ci.toml
@@ -1,7 +1,7 @@
 # Copyright 2020 Pants project contributors.
 # Licensed under the Apache License, Version 2.0 (see LICENSE).
 
-# See https://pants.readme.io/docs/using-pants-in-ci.
+# See https://www.pantsbuild.org/docs/using-pants-in-ci.
 
 [GLOBAL]
 pantsd = false
