Make our py3 binary non-zip-safe.
Otherwise PEP420 doesn't work.

--- a/helloworld/BUILD
+++ b/helloworld/BUILD
@@ -10,6 +10,7 @@ python_binary(
         "//:ansicolors",
         "helloworld/greet",
     ],
+    zip_safe=False
 )
 
 # Note: Has sdist dependencies, so must be built on Linux.
