--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,10 @@ install:
   - ./pants --version  # This will bootstrap Pants
 
 script:
-  - ./pants --changed-since=origin/master lint
-  - ./pants --changed-since=origin/master --changed-include-dependees=transitive test
+  - ./pants lint test '**'
   # Smoke test that our release process will work.
   - ./pants binary helloworld/main.py helloworld/main_py2.py
+  - ./pants run helloworld/main.py
+  - ./pants run helloworld/main_pb2.py
   - ./pants setup-py --args="bdist_wheel" helloworld/util:dist
   - ./pants awslambda helloworld:helloworld-awslambda
