--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ install:
 
 script:
   # We also smoke test that our release process will work by running `package`.
-  - ./pants lint test package '::'
+  - ./pants lint typecheck test package '::'
   - ./pants run helloworld/main.py
   - ./pants run helloworld/main_py2.py
