--- a/pants.toml
+++ b/pants.toml
@@ -13,6 +13,7 @@ backend_packages.add = [
   'pants.backend.python.lint.black',
   'pants.backend.python.lint.flake8',
   'pants.backend.python.lint.isort',
+  'pants.backend.python.typecheck.mypy',
 ]
 
 # This ensures that the result of `./pants package` is always unique. It will become the default in
@@ -34,9 +35,13 @@ requirement_constraints = "constraints.txt"
 [python-protobuf]
 # See https://www.pantsbuild.org/docs/protobuf.
 runtime_dependencies = ["//:protobuf"]
+mypy_plugin = true
 
 [flake8]
-config = ".flake8"
+config = "build-support/.flake8"
 
 [isort]
 config = [".isort.cfg"]
+
+[mypy]
+config = "build-support/mypy.ini"
