--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,7 @@ install:
 script:
   - ./pants lint test '**'
   # Smoke test that our release process will work.
-  - ./pants binary helloworld/main.py helloworld/main_py2.py
+  - ./pants package helloworld/main.py helloworld/main_py2.py helloworld:helloworld-awslambda
   - ./pants run helloworld/main.py
   - ./pants run helloworld/main_py2.py
-  # TODO: Fix PEX bug causing these to fail in CI, then reactivate when 2.0.0b1 is released.
-#  - ./pants setup-py --args="bdist_wheel" helloworld/util:dist
-#  - ./pants awslambda helloworld:helloworld-awslambda
+  - ./pants setup-py --args="bdist_wheel" helloworld/util:dist
