--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,7 @@ install:
   - ./pants --version  # This will bootstrap Pants
 
 script:
-  - ./pants lint test '**'
-  # Smoke test that our release process will work.
-  - ./pants package helloworld/main.py helloworld/main_py2.py helloworld:helloworld-awslambda
+  # We also smoke test that our release process will work by running `package`.
+  - ./pants lint test package '::'
   - ./pants run helloworld/main.py
   - ./pants run helloworld/main_py2.py
-  - ./pants setup-py --args="bdist_wheel" helloworld/util:dist
