--- a/pants.toml
+++ b/pants.toml
@@ -2,7 +2,7 @@
 # Licensed under the Apache License, Version 2.0 (see LICENSE).
 
 [GLOBAL]
-pants_version = "2.0.0b3"
+pants_version = "2.0.0rc0"
 pantsd = true  # Enable the Pants daemon for better performance.
 
 backend_packages.add = [
@@ -31,8 +31,9 @@ interpreter_constraints = [">=3.7"]
 # Use a lockfile. See https://www.pantsbuild.org/docs/python-third-party-dependencies.
 requirement_constraints = "constraints.txt"
 
-[protoc]
-runtime_targets = ["//:protobuf"]
+[python-protobuf]
+# See https://www.pantsbuild.org/docs/protobuf.
+runtime_dependencies = ["//:protobuf"]
 
 [flake8]
 config = ".flake8"
