--- a/helloworld/util/proto/BUILD
+++ b/helloworld/util/proto/BUILD
@@ -6,10 +6,11 @@
 protobuf_library(dependencies=[":init"])
 
 
-# Note that we need an `__init__.py` file for MyPy to recognize our generated code as a valid module. We include this
-# in the dependencies for the `protobuf_library` to ensure the `__init__.py` is always used.
+# Note that we need an `__init__.py` file for MyPy to recognize our generated code as a valid
+# module. We include this in the dependencies for the `protobuf_library` to ensure the
+# `__init__.py` is always used.
 #
 # Often, you won't want to put `__init__.py` files in your Protobuf directories; see
-# https://www.pantsbuild.org/docs/protobuf#protobuf-and-source-roots for how to change where the protobuf code is
-# generated.
+# https://www.pantsbuild.org/docs/protobuf#protobuf-and-source-roots for how to change where the
+# protobuf code is generated.
 python_library(name="init")
