--- a/helloworld/util/BUILD
+++ b/helloworld/util/BUILD
@@ -1,27 +1,34 @@
 # Copyright 2020 Pants project contributors.
 # Licensed under the Apache License, Version 2.0 (see LICENSE).
 
-# `name` defaults to the name of this directory, i.e., `util`.
-# `sources` defaults to ['*.py', '!*_test.py', '!test_*.py', '!conftest.py'].
-# `dependencies` is set because only Pants 2.2+ can infer dependencies on Protobuf.
-python_library(
-    dependencies=["helloworld/util/proto"],
-)
+# This target sets the metadata for all the Python non-test files in this directory.
+#
+# * `name` defaults to the name of this directory, i.e., `util`.
+# * `sources` defaults to ['*.py', '!*_test.py', '!test_*.py', '!conftest.py'].
+# * `dependencies` are inferred.
+python_library()
 
-# `sources` defaults to ['*_test.py', 'test_*.py', 'conftest.py'].
-# Pants cannot infer dependencies on `resources` targets, so we explicitly add the dep.
+# This target sets the metadata for all the Python test files in this directory.
+#
+# * `sources` defaults to ['*_test.py', 'test_*.py', 'conftest.py'].
+# * Pants cannot infer dependencies on `resources` targets, so we explicitly add the dep.
 python_tests(
     name='tests',
     dependencies=[":test_data"],
 )
 
+# This target teaches Pants about our JSON file, which allows for other targets to depend on it.
 resources(
     name='test_data',
     sources=['*_test_data.json'],
 )
 
-# See https://www.pantsbuild.org/docs/python-distributions.
-# Because this target has no source code, Pants cannot infer dependencies.
+# This target allows us to build a `.whl` bdist and a `.tar.gz` sdist by auto-generating
+#  `setup.py`. See https://www.pantsbuild.org/docs/python-distributions.
+#
+# Because this target has no source code, Pants cannot infer dependencies. We depend on `:util`,
+#  which means we'll include all the non-test Python files in this directory, and any of
+#  their dependencies.
 python_distribution(
     name="dist",
     dependencies=[":util"],
