--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -1,3 +1,8 @@
+# Copyright 2020 Pants project contributors.
+# Licensed under the Apache License, Version 2.0 (see LICENSE).
+
+# See https://pants.readme.io/docs/using-pants-in-ci for tips on how to set up your CI with Pants.
+
 name: Pants
 
 on:
