--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@
 # Licensed under the Apache License, Version 2.0 (see LICENSE).
 
 ansicolors>=1.0.2
-setuptools>=42.0.0
+setuptools<54.0,>=50.3.0
 translate>=3.2.1
 protobuf>=3.11.3
