Limit GH action execution to pantsbuild.

--- a/.github/workflows/pants.yaml
+++ b/.github/workflows/pants.yaml
@@ -12,7 +12,16 @@ on:
     branches: [ main ]
 
 jobs:
+  org-check:
+    name: Check GitHub Organization
+    if: ${{ github.repository_owner == 'pantsbuild' }}
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Noop
+        run: "true"
   build:
+    name: Perform CI Checks
+    needs: org-check
     env:
       PANTS_CONFIG_FILES: pants.ci.toml
     runs-on: ubuntu-latest
