--- a/pants.toml
+++ b/pants.toml
@@ -2,7 +2,7 @@
 # Licensed under the Apache License, Version 2.0 (see LICENSE).
 
 [GLOBAL]
-pants_version = "2.6.0rc2"
+pants_version = "2.5.1"
 
 backend_packages.add = [
   "pants.backend.awslambda.python",
